--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="dark:bg-slate-800 dark:text-white light:bg-white text-slate-800">
+<body class="max-h-screen dark:bg-slate-800 dark:text-white light:bg-white text-slate-800">
   <app-root *ngIf=""></app-root>
 </body>
 </html>
